# smartbox

./: .flake8  .gitignore  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  test_session.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yml  python-package.yml
smartbox/: __init__.py  cmd.py  error.py  models.py  resailer.py  session.py  socket.py  update_manager.py
src/smartbox/: __init__.py  cmd.py  models.py  resailer.py  reseller.py  session.py  socket.py  update_manager.py
tests/: common.py  conftest.py  test_cmd.py  test_models.py  test_resailer.py  test_session.py  test_socket.py  test_update_manager.py
tests/fixtures/devs/device2/htr_mod/3/: samples.json
