[metadata]
name = smartbox
version = 2.1.0-beta.1
author = Delmael
description = Python API to control heating 'smart boxes'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/delmael/smartbox
project_urls = 
	Bug Tracker = https://github.com/delmael/smartbox/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
python_requires = >=3.12
packages = smartbox
include_package_data = True
install_requires = 
	aiohttp
	asyncclick
	jq
	python-socketio>=4.6.0,<5.0.0
	requests
	websocket_client
	pydantic==2.10.4
	jq
tests_require = 
	freezegun
	pytest
	pytest-cov
	pytest-asyncio
	pytest-benchmark
	pytest-mock
	pytest-randomly
	requests-mock
	types-requests
	tox
zip_safe = False

[options.package_data]
smartbox = py.typed

[options.entry_points]
console_scripts = 
	smartbox = smartbox.cmd:smartbox

[aliases]
test = pytest

[mypy]

[mypy-freezegun]
ignore_missing_imports = True

[mypy-jq]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-socketio]
ignore_missing_imports = True

[mypy-requests.packages.urllib3.util.retry]
ignore_missing_imports = True

[tool:pytest]
asyncio_mode = auto
log_cli = true
log_cli_level = warning

[egg_info]
tag_build = 
tag_date = 0

